Falta uma parte e verificar outras

--- a/ATH/ath1/Makefile
+++ b/ATH/ath1/Makefile
@@ -1,10 +1,13 @@
 file=lettre
+output=ChedraouiSilvaTiago_ProjectSummary
+
 make:
 	latex $(file).tex
 	latex $(file).tex
 	dvips $(file).dvi -o
 	ps2pdf13 $(file).ps
-	make clean	
+	make clean
+	cp $(file).pdf $(output).pdf
 show:
 	evince $(file).pdf
 clean:
